--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/AustinLiu01"
+  github           : "AustinLiu01"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -55,7 +55,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "www.linkedin.com/in/changxu-liu-7b6463212"
+  linkedin         : "changxu-liu-7b6463212"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
