--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Changxu Liu/Personal Homepage"
+title                    : "Personal Homepage"
 title_separator          : "-"
 name                     : &name "Changxu Liu"
 description              : &description "a second-year Ph.D. student from Fudan University"
