--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ repository               : "AustinLiu01/AustinLiu01.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "changxu.png"
+  avatar           : "changxu_0505.jpg"
   name             : "Changxu Liu (刘昶旭)"
   pronouns         : "he/him"  
   bio              : "Second-year Ph.D. student"
