--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Personal Homepage"
 title_separator          : "-"
 name                     : &name "Changxu Liu"
-description              : &description "a second-year Ph.D. student from Fudan University"
+description              : &description "a third-year Ph.D. Candidate in Fudan University"
 url                      : https://austinliu01.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "AustinLiu01/AustinLiu01.github.io"
@@ -23,7 +23,7 @@ author:
   avatar           : "changxu_0505.jpg"
   name             : "Changxu Liu (刘昶旭)"
   pronouns         : "he/him"  
-  bio              : "Second-year Ph.D. student"
+  bio              : "Third-year Ph.D. Candidate"
   location         : "Shanghai, P.R.C."
   employer         : "Fudan University"
   uri              : # URL
