--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   avatar           : "changxu.jpg"
   name             : "Changxu Liu (刘昶旭)"
   pronouns         : "he/him"  
-  bio              : "Third-year Ph.D. Candidate"
+  bio              : "Fourth-year Ph.D. Candidate"
   location         : "Shanghai, P.R.C."
   employer         : "Fudan University"
   uri              : # URL
